@@ -1,31 +1,31 @@
 /* ui-version: 2 (do not change when modifying theme for yourself) */
 /* Variables */
 @if not(global-variable-exists(background-color)) {
-  $background-color: #ccc;
+  $background-color: #ccc !global;
 }
 
 /* Background colors associated with received emails: */
 @if not(global-variable-exists(recv-normal)) {
-  $recv-normal: #ffffff;
+  $recv-normal: #ffffff !global;
 }
 @if not(global-variable-exists(recv-quoted)) {
-  $recv-quoted: #e8e8e8;
+  $recv-quoted: #e8e8e8 !global;
 }
 @if not(global-variable-exists(recv-collapsed)) {
-  $recv-collapsed: #f5f5f5;
+  $recv-collapsed: #f5f5f5 !global;
 }
 
 /* Background colors associated with sent emails: */
 @if not(global-variable-exists(sent-normal)) {
-  $sent-normal: #ffffff;
+  $sent-normal: #ffffff !global;
 }
 
 @if not(global-variable-exists(sent-quoted)) {
-  $sent-quoted: #e8e8e8;
+  $sent-quoted: #e8e8e8 !global;
 }
 
 @if not(global-variable-exists(sent-collapsed)) {
-  $sent-collapsed: #f5f5f5;
+  $sent-collapsed: #f5f5f5 !global;
 }
 
 /* Fonts */
@@ -46,8 +46,13 @@
 }
 
 /* Colours */
-$email-solid: #d8d8d8;
-$focused-solid: #4a90d9;
+@if not(global-variable-exists(email-solid)) {
+  $email-solid: #d8d8d8 !global;
+}
+
+@if not(global-variable-exists(focused-solid)) {
+  $focused-solid: #4a90d9 !global;
+}
 
 @media print {
 
